--- a/.github/workflows/xinglianjiqian.yml
+++ b/.github/workflows/xinglianjiqian.yml
@@ -1,31 +1,26 @@
 name: xinglianjiqian
-
 on:
   workflow_dispatch:
   schedule:
-    - cron: '24 4/6 * * *'
-jobs:  # 3208
+    - cron: '14 4/6 * * *'
+jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
       - name: xinglianjiqian
         env:
-          fewb7: ${{ secrets.fewb7 }}
+          zjsi668: ${{ secrets.zjsi668 }}
         run: |
-          echo $fewb7 | jq -r .sct0465 | /bin/bash
-          echo $ten99033 | jq -r .yrro2 | /bin/bash
-          echo $xd42 | jq -r .exxiz9582 | /bin/bash
-          echo $anqw60 | jq -r .grj5 | /bin/bash
-          echo $qot61 | jq -r .fik39 | /bin/bash
-          echo $vchx145 | jq -r .qu1188 | /bin/bash
-          echo $xxkln606 | jq -r .miv21347 | /bin/bash
-          echo $qg5 | jq -r .cgpa7 | /bin/bash
-          echo $enbo41072 | jq -r .b48 | /bin/bash
-          echo $jc869 | jq -r .xez5 | /bin/bash
-          echo $rurf3584 | jq -r .pnqor448 | /bin/bash
-          echo $zvonv059 | jq -r .mx57 | /bin/bash
-          echo $c4761 | jq -r .ava570 | /bin/bash
-          echo $wa547 | jq -r .tbb88 | /bin/bash
-          echo $xrkvr14950 | jq -r .pmg4 | /bin/bash
+          echo $zjsi668 | jq -r .velu8460 | /bin/bash
+          echo $kt0 | jq -r .y851 | /bin/bash
+          echo $j471 | jq -r .itnfc86238 | /bin/bash
+          echo $b332 | jq -r .k1 | /bin/bash
+          echo $ehg78 | jq -r .lu65206 | /bin/bash
+          echo $wn41 | jq -r .rh58932 | /bin/bash
+          echo $rexf74592 | jq -r .flnqi97556 | /bin/bash
+          echo $lhyi4 | jq -r .oj14473 | /bin/bash
+          echo $rd307 | jq -r .zcc103 | /bin/bash
+          echo $yiw02928 | jq -r .pusgk41116 | /bin/bash
 
